# JSON-XML-conversion

./: json2xml.py  payload.json  payload.xml  pyproject.toml  xmltojson.py
